# keecas

./: .gitignore  pyproject.toml
keecas/: __init__.py  dataframe.py  display.py  pint_sympy.py  pipe_command.py  utils.py
keecas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_dataframe.py  test_display.py  test_pipe_command.py
