[tool.poetry]
name = "keecas"
version = "0.1.2"
description = "A set of tools for symbolic math computation done in a jupyter notebook, aimed specifically for Quarto. It is based mostly on sympy."
authors = ["kompre <s.follador@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pint = "^0.24.3"
pipe = "^2.2"
sympy = "^1.13.1"
regex = "^2024.7.24"
ipython = "^8.26.0"
flatten-dict = "^0.4.2"
ruamel-yaml = "^0.18.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.5"
